--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     $("#entry2").val(arrayresp["ora_ingresso"].substr(0, 2));
                     $("#entryminutes2").val(arrayresp["ora_ingresso"].substr(3, 2));
                     $("#exit2").val(arrayresp["ora_uscita"].substr(0, 2));
-                    // $("#minutiuscita2").val(arrayresp["nome"]);
+                    $("#minutiuscita2").val(arrayresp["nome"].substr(3, 2));
                     // $("#greenpass2").val(arrayresp["cognome"]);
                     $("#name2").val(arrayresp["nome"]);
                     $("#surname2").val(arrayresp["cognome"]);
