inseriti css per le ombre

--- a/index.html
+++ b/index.html
@@ -179,104 +179,106 @@
             </tbody>
         </table>
     </div>
-
-    <tbody id="insertNew">
-        <div class="inserttab" id="insertnew">
-            <label for="date">DATA<input class="theinput" id="date" type="text" placeholder="dd/mm/aaaa"></label><input
-                type="button" onclick=" getnow()" value="ADESSO" /><br /><br />
-            <label for="entry">ENTRATA</label>
-            <span id="entrytime">
-                <select id="entry">
-                    <option value="00">00</option>
-                    <option value="01">01</option>
-                    <option value="02">02</option>
-                    <option value="03">03</option>
-                    <option value="04">04</option>
-                    <option value="05">05</option>
-                    <option value="06">06</option>
-                    <option value="07">07</option>
-                    <option value="08">08</option>
-                    <option value="09">09</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                    <option value="13">13</option>
-                    <option value="14">14</option>
-                    <option value="15">15</option>
-                    <option value="16">16</option>
-                    <option value="17">17</option>
-                    <option value="18">18</option>
-                    <option value="19">19</option>
-                    <option value="20">20</option>
-                    <option value="21">21</option>
-                    <option value="22">22</option>
-                    <option value="23">23</option>
-                </select> :
-                <select id="entryminutes">
-                    <script type="text/javascript">
-                        for (var i = 0; i <= 59; i++) {
-                            if (i < 10) {
-                                i = "0" + i;
+    <div id="insertnewdiv">
+        <tbody id="insertNew">
+            <div class="inserttab" id="insertnew">
+                <label for="date">DATA<input class="theinput" id="date" type="text"
+                        placeholder="dd/mm/aaaa"></label><input type="button" onclick=" getnow()"
+                    value="ADESSO" /><br /><br />
+                <label for="entry">ENTRATA</label>
+                <span id="entrytime">
+                    <select id="entry">
+                        <option value="00">00</option>
+                        <option value="01">01</option>
+                        <option value="02">02</option>
+                        <option value="03">03</option>
+                        <option value="04">04</option>
+                        <option value="05">05</option>
+                        <option value="06">06</option>
+                        <option value="07">07</option>
+                        <option value="08">08</option>
+                        <option value="09">09</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                    </select> :
+                    <select id="entryminutes">
+                        <script type="text/javascript">
+                            for (var i = 0; i <= 59; i++) {
+                                if (i < 10) {
+                                    i = "0" + i;
+                                }
+                                document.write("<option value='" + i + "'>" + i + "</option>");
                             }
-                            document.write("<option value='" + i + "'>" + i + "</option>");
-                        }
 
-                    </script>
-                </select></span><br /><br />
-            <label for="exit">USCITA</label>
-            <span id="exittime">
-                <select id="exit">
-                    <option value="00">00</option>
-                    <option value="01">01</option>
-                    <option value="02">02</option>
-                    <option value="03">03</option>
-                    <option value="04">04</option>
-                    <option value="05">05</option>
-                    <option value="06">06</option>
-                    <option value="07">07</option>
-                    <option value="08">08</option>
-                    <option value="09">09</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                    <option value="13">13</option>
-                    <option value="14">14</option>
-                    <option value="15">15</option>
-                    <option value="16">16</option>
-                    <option value="17">17</option>
-                    <option value="18">18</option>
-                    <option value="19">19</option>
-                    <option value="20">20</option>
-                    <option value="21">21</option>
-                    <option value="22">22</option>
-                    <option value="23">23</option>
-                </select> :
-                <select id="minutiuscita">
-                    <script type="text/javascript">
-                        for (var i = 0; i <= 59; i++) {
-                            if (i < 10) {
-                                i = "0" + i;
+                        </script>
+                    </select></span><br /><br />
+                <label for="exit">USCITA</label>
+                <span id="exittime">
+                    <select id="exit">
+                        <option value="00">00</option>
+                        <option value="01">01</option>
+                        <option value="02">02</option>
+                        <option value="03">03</option>
+                        <option value="04">04</option>
+                        <option value="05">05</option>
+                        <option value="06">06</option>
+                        <option value="07">07</option>
+                        <option value="08">08</option>
+                        <option value="09">09</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                    </select> :
+                    <select id="minutiuscita">
+                        <script type="text/javascript">
+                            for (var i = 0; i <= 59; i++) {
+                                if (i < 10) {
+                                    i = "0" + i;
+                                }
+                                document.write("<option value='" + i + "'>" + i + "</option>");
                             }
-                            document.write("<option value='" + i + "'>" + i + "</option>");
-                        }
 
-                    </script>
-                </select></span><br /><br />
-            <label for="greenpass">GREENPASS</label>
-            <select id="greenpass">
-                <option value="si">SI</option>
-                <option value="no">NO</option>
-            </select><br /><br />
-            <label for="name">NOME</label><input id="name" type="text"><br /><br />
-            <label for="surname">COGNOME</label><input id="surname" type="text"><br /><br />
-            <label for="company">AZIENDA</label><input id="company" type="text"><br /><br />
-            <label for="goal">MOTIVO</label><input id="goal" type="text"><br /><br />
-            <label for="referent">REFERENTE</label><input id="referent" type="text"><br /><br />
-            <label for="countrynum">TARGA</label><input id="countrynum" type="text"><br /><br />
-            <label for="notes">NOTE</label><input id="notes" type="text"><br /><br />
-            <input type="button" value="INVIA" id="sender" name="sender" onclick="insertnew()" />
-        </div>
-    </tbody>
+                        </script>
+                    </select></span><br /><br />
+                <label for="greenpass">GREENPASS</label>
+                <select id="greenpass">
+                    <option value="si">SI</option>
+                    <option value="no">NO</option>
+                </select><br /><br />
+                <label for="name">NOME</label><input id="name" type="text"><br /><br />
+                <label for="surname">COGNOME</label><input id="surname" type="text"><br /><br />
+                <label for="company">AZIENDA</label><input id="company" type="text"><br /><br />
+                <label for="goal">MOTIVO</label><input id="goal" type="text"><br /><br />
+                <label for="referent">REFERENTE</label><input id="referent" type="text"><br /><br />
+                <label for="countrynum">TARGA</label><input id="countrynum" type="text"><br /><br />
+                <label for="notes">NOTE</label><input id="notes" type="text"><br /><br />
+                <input type="button" value="INVIA" id="sender" name="sender" onclick="insertnew()" />
+            </div>
+        </tbody>
+    </div>
     <!-- ################# area di modifica ############################# -->
     <div id="areaedit">
         <script>
