--- a/index.html
+++ b/index.html
@@ -156,14 +156,27 @@
             $.ajax({
                 url: "searchby.php",
                 type: "POST",
-                dataType: "text",
+                dataType: "JSON",
                 data: {
                     field: $("#searchbyfield").val(),
                     textin: $("#searchtxt").val()
 
                 },
                 success: function (report) {
-                    alert(report);
+                    $("#reachtableres").css('display', 'block');
+                    $("#userlist").css('display', 'none');
+                    $("#insertnew").css('display', 'none');
+                    $.each(report.visitatori, function (e, elemb) {
+                        var newRowb = "<tr><td>" + elemb.id + "</td><td>" + elemb.datagiorno + "</td><td>" +
+                            elemb.ora_ingresso + "</td><td>" + elemb.ora_uscita + "</td><td>" + elemb.covidControl + "</td><td>" +
+                            elemb.nome + "</td><td>" + elemb.cognome + "</td><td>" + elemb.company + "</td><td>" + elemb.entryReasons +
+                            "</td><td>" + elemb.referent + "</td><td>" + elemb.licensePlate + "</td><td>" + elemb.notes +
+                            "</td><td><input type='button' value='MODIFICA' onclick='editit(" + elemb.id + ")' /></td>" +
+                            "<td><input type='button' value='CANCELLA' onclick='deleteit(" + elemb.id + ")'></td></tr>";
+
+                        $(newRowb).appendTo("#jsondatareasearchb");
+
+                    });
 
                 }
 
@@ -191,8 +204,37 @@
         <input type="text" id="searchtxt" placeholder="">
         <input type="button" value="SEARCH" onclick="inserttype()">
     </div>
+    <!--  ######### risultato ricerca #################################################### -->
+    <div id="reachtableres" class="table-wrapper">
+        <h1>Risultato ricerca</h1>
+        <table class="fl-table">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Data</th>
+                    <th>Ingresso</th>
+                    <th>Uscita</th>
+                    <th>Greenpass</th>
+                    <th>Nome</th>
+                    <th>Cognome</th>
+                    <th>Azienda</th>
+                    <th>motivazione</th>
+                    <th>Referente</th>
+                    <th>Targa</th>
+                    <th>Note</th>
+                    <th>Modifica</th>
+                    <th>Cancella</th>
+                </tr>
+
+            </thead>
+            <tbody id="jsondatareasearchb">
+
+            </tbody>
+        </table>
+    </div>
+    <!--  ######### fine risultato ricerca #################################################### -->
     <!-- ############################# fine area ricerca utenti  ################# -->
-    <div class="table-wrapper">
+    <div id="userlist" class="table-wrapper">
         <h1>Controllo accessi</h1>
         <table class="fl-table">
             <thead>
