aggiustato problema ora su getnow()

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             if (day < 10) {
                 day = "0" + day;
             }
+            if (ora < 10) {
+                ora = "0" + ora;
+            }
             if (minuti < 10) {
                 minuti = "0" + minuti;
             }
@@ -181,7 +184,7 @@
                 }
 
             });
-// ################# prova di pushing ##################
+            // ################# prova di pushing ##################
 
         }
     </script>
@@ -546,7 +549,7 @@
             <input type="button" value="INVIA" id="sender2" name="sender2" onclick="editRecord()" />
         </div>
     </div>
-    
+
 </body>
 
 </html>
