aggiunta parte codice fiscale

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 
 
         </script>
-
+        <input type="button" value="CHIUDI MODIFICA" />
         <div class="inserttab" id="insertedit">
             <label for="theid">ID</label><input type="text" id="theid"><br /><br />
             <label for="date">DATA<input class="theinput" id="date2" type="text" placeholder="dd/mm/aaaa"></label><input
