--- a/barCodeControl/insertAllows.html
+++ b/barCodeControl/insertAllows.html
@@ -13,7 +13,7 @@
 <body>
     <script>
         function getdata() {
-           /*  ########## commento per inserimento in github provvisorio ############### */
+            /*  ########## commento per inserimento in github provvisorio ############### */
             let fiscalcode = $("#fiscalCode").val();
             let nome = $("#nome").val();
             let cognome = $("#cognome").val();
@@ -31,6 +31,7 @@
                 },
                 success: function (msg) {
                     alert(msg);
+                    location.reload(true);
                 }
 
             });
