aggiunta parte logica ricerca lavoratore abilitato

--- a/barCodeControl/index.html
+++ b/barCodeControl/index.html
@@ -13,7 +13,9 @@
         <label id="codicefiscale">Inserisci codice fiscale <input type="text" placeholder="codice fiscale"></label>
         <input type="button" value="INVIA">
     </form>
-
+    <div>
+        <a href="insertAllows.html">Inserisci nuovo codice fiscale</a>
+    </div>
 </body>
 
 </html>
