--- a/barCodeControl/insertAllows.html
+++ b/barCodeControl/insertAllows.html
@@ -47,6 +47,9 @@
         <input type="text" id="note" name="note" placeholder="NOTE"><br /><br />
         <input type="button" id="sendbut" onclick="getdata()" value="REGISTRA">
     </form>
+    <div>
+        <h3><a href="index.html">Ricerca ed inserimento lavoratore</a></h3>
+    </div>
 </body>
 
 </html>
