--- a/barCodeControl/insertAllows.html
+++ b/barCodeControl/insertAllows.html
@@ -48,7 +48,8 @@
         <input type="button" id="sendbut" onclick="getdata()" value="REGISTRA">
     </form>
     <div>
-        <h3><a href="index.html">Ricerca ed inserimento lavoratore</a></h3>
+        <br><br>
+        <h3><a href="index.html">VAI A TIMBRATORE</a></h3>
     </div>
 </body>
 
