commit in non completamento, sto inserendo insert WHERE

--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
 
         }
     </script>
-
+    <a href="barCodeControl">VAI AD ACCESSO LAVORATORI</a>
+    <br><br>
     <div id="searchform">
         <label for="searchbyfield">Ricerca</label>
         <select id="searchbyfield" onchange="">
@@ -549,7 +550,7 @@
             <input type="button" value="INVIA" id="sender2" name="sender2" onclick="editRecord()" />
         </div>
     </div>
-<!-- #########################################################
+    <!-- #########################################################
 https://www.html.it/articoli/jquery-autocomplete-plugin-tutorial-ed-esempi/
 http://www.codicefiscaleonline.com/
 ################################################### -->
