commit per continuare lavoro da pc desktop a casa

--- a/barCodeControl/index.html
+++ b/barCodeControl/index.html
@@ -19,7 +19,7 @@
                 type: "POST",
                 data: { codfisc: codfisc },
                 success: function (msgresponse) {
-                    alert(msgresponse);
+                    alert(" response = " + msgresponse);
                 }
             });
 
