aggiunta select tipologia accessi

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         }
     </script>
-    <a href="barCodeControl">VAI AD ACCESSO LAVORATORI</a>
+    <a href="barCodeControl" class="">VAI AD ACCESSO LAVORATORI</a>
     <br><br>
     <div id="searchform">
         <label for="searchbyfield">Ricerca</label>
