--- a/barCodeControl/insertAllows.html
+++ b/barCodeControl/insertAllows.html
@@ -44,6 +44,14 @@
         <input type="text" id="nome" name="nome" placeholder="NOME"><br /><br />
         <input type="text" id="cognome" name="cognome" placeholder="COGNOME"><br /><br />
         <input type="text" id="azienda" name="azienda" placeholder="AZIENDA"><br /><br />
+        <label for="accesskind">Tipologia di Visitatore</label><br>
+        <select id="accesskind">
+            <option value="worker">Lavoratore autorizzato</option>
+            <option value="visitor">Visitatore</option>
+            <option value="driversupplier">Autista/Fornitore</option>
+            <option value="technician">Tecnico manutentore</option>
+        </select>
+        <br /><br />
         <input type="text" id="note" name="note" placeholder="NOTE"><br /><br />
         <input type="button" id="sendbut" onclick="getdata()" value="REGISTRA">
     </form>
