--- a/barCodeControl/insertAllows.html
+++ b/barCodeControl/insertAllows.html
@@ -58,7 +58,7 @@
     </form>
     <div>
         <br><br>
-        <h3><a href="index.html">VAI A TIMBRATORE</a></h3>
+        <a href="index.html" class="navigator">VAI A TIMBRATORE</a>
     </div>
 </body>
 
